form style edit

--- a/index.html
+++ b/index.html
@@ -69,25 +69,21 @@
         /></a>
       </div>
 
-      <h2>Ideer til din profiltekst</h2>
-      <p>
-        “Metro om dagen, Java om natten – og jeg kan godt lide, når det hele
-        kører lidt for stærkt.” <br />“Kaldes Onkel… men jeg lover, jeg er ikke
-        kedelig.” <br />“Jeg drikker Monster, men bider kun, hvis du beder om
-        det.”<br />
-        “Stabil i hverdagen. Ustabil på den gode måde, når lyset slukker.”<br />
-        “Jeg er god til Java… og endnu bedre til at få dig til at glemme
-        tiden.”<br />
-        “Jeg kan holde en køreplan – men jeg foretrækker at improvisere med den
-        rigtige.”<br />
-        “49 år, rolig hånd, frække tanker. Match og find ud af resten.”<br />
-        “Loyal type med et stort drive. Spørgsmålet er, om du kan følge med.”
-        <br />“Jeg kører under jorden i København – men jeg kan sagtens få
-        gnister over jorden.”<br />
-        “Sød som en familiefar, fræk som en hemmelighed.”<br />
-        “Onkel til hverdag. ‘Monster’ når stemningen er til det.” <br />“Hvis du
-        kan lide mænd med ansvar… så vent til du møder min selvtillid.”
-      </p>
+      <div class="quote-block">
+        <h2>Monster Match Quotes</h2>
+  <p>“Metro by day, Java by night — and I like it when everything runs a little too fast.”</p>
+  <p>“They call me Uncle… but I promise I’m not boring.”</p>
+  <p>“I drink Monster, but I only bite if you ask.”</p>
+  <p>“Stable in everyday life. Unstable in the good way when the lights go out.”</p>
+  <p>“I’m good at Java… and even better at making you lose track of time.”</p>
+  <p>“I can stick to a schedule — but I prefer to improvise with the right one.”</p>
+  <p>“49 years old, steady hands, naughty thoughts. Match and find out the rest.”</p>
+  <p>“Loyal type with a lot of drive. The question is: can you keep up?”</p>
+  <p>“I run underground in Copenhagen — but I can definitely create sparks above ground.”</p>
+  <p>“Sweet like a family man, naughty like a secret.”</p>
+  <p>“Uncle by day. ‘Monster’ when the mood is right.”</p>
+  <p>“If you like men with responsibility… just wait until you meet my confidence.”</p>
+</div>
 
       <div class="imagerow">
         <a
