--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             alt="Sk-rmbillede-2025-12-27-002437"
         /></a>
       </div>
-      <div id="headerBtns">
+
+      <div>
         <a class="button">Log In</a>
         <a href="signupform.html" class="button">Sign Up</a>
       </div>
@@ -24,13 +25,15 @@
 
     <main>
       <h1>Find someone who can handle your energy</h1>
-      <a
-        ><img
-          src="https://i.ibb.co/VG0qypf/Sk-rmbillede-2025-12-27-013449.png"
-          alt="Sk-rmbillede-2025-12-27-013449"
-      /></a>
+      <div id="indexUpperPicture">
+        <a
+          ><img
+            src="https://i.ibb.co/VG0qypf/Sk-rmbillede-2025-12-27-013449.png"
+            alt="Sk-rmbillede-2025-12-27-013449"
+        /></a>
+      </div>
 
-      <p id="whyYouShould"><strong>Why you should monstay with us</strong></p>
+      <h2 id="whyYouShould"><strong>You should monstay with us</strong></h2>
 
       <div class="imagerow">
         <a
@@ -58,12 +61,6 @@
       <div class="imagerow">
         <a
           ><img
-            src="https://i.ibb.co/3mHdZLhJ/monstermatch4.png"
-            alt="monstermatch4"
-        /></a>
-
-        <a
-          ><img
             src="https://i.ibb.co/kTGtdL9/monstermatch5.png"
             alt="monstermatch5"
         /></a>
@@ -71,19 +68,41 @@
 
       <div class="quote-block">
         <h2>Monster Match Quotes</h2>
-  <p>“Metro by day, Java by night — and I like it when everything runs a little too fast.”</p>
-  <p>“They call me Uncle… but I promise I’m not boring.”</p>
-  <p>“I drink Monster, but I only bite if you ask.”</p>
-  <p>“Stable in everyday life. Unstable in the good way when the lights go out.”</p>
-  <p>“I’m good at Java… and even better at making you lose track of time.”</p>
-  <p>“I can stick to a schedule — but I prefer to improvise with the right one.”</p>
-  <p>“49 years old, steady hands, naughty thoughts. Match and find out the rest.”</p>
-  <p>“Loyal type with a lot of drive. The question is: can you keep up?”</p>
-  <p>“I run underground in Copenhagen — but I can definitely create sparks above ground.”</p>
-  <p>“Sweet like a family man, naughty like a secret.”</p>
-  <p>“Uncle by day. ‘Monster’ when the mood is right.”</p>
-  <p>“If you like men with responsibility… just wait until you meet my confidence.”</p>
-</div>
+        <p>
+          “Metro by day, Java by night — and I like it when everything runs a
+          little too fast.”
+        </p>
+        <p>“They call me Uncle… but I promise I’m not boring.”</p>
+        <p>“I drink Monster, but I only bite if you ask.”</p>
+        <p>
+          “Stable in everyday life. Unstable in the good way when the lights go
+          out.”
+        </p>
+        <p>
+          “I’m good at Java… and even better at making you lose track of time.”
+        </p>
+        <p>
+          “I can stick to a schedule — but I prefer to improvise with the right
+          one.”
+        </p>
+        <p>
+          “49 years old, steady hands, naughty thoughts. Match and find out the
+          rest.”
+        </p>
+        <p>
+          “Loyal type with a lot of drive. The question is: can you keep up?”
+        </p>
+        <p>
+          “I run underground in Copenhagen — but I can definitely create sparks
+          above ground.”
+        </p>
+        <p>“Sweet like a family man, naughty like a secret.”</p>
+        <p>“Uncle by day. ‘Monster’ when the mood is right.”</p>
+        <p>
+          “If you like men with responsibility… just wait until you meet my
+          confidence.”
+        </p>
+      </div>
 
       <div class="imagerow">
         <a
@@ -92,8 +111,16 @@
             alt="monstermatch3"
         /></a>
       </div>
+      <div id="downloadImg">
+        <a href="https://play.google.com/store/search?q=dating&c=apps&hl=en"
+          ><img
+            src="https://i.ibb.co/3mHdZLhJ/monstermatch4.png"
+            alt="monstermatch4"
+        /></a>
+      </div>
     </main>
-
-    <footer></footer>
+    <footer class="site-footer">
+      <p>© Monster Match Dating App</p>
+    </footer>
   </body>
 </html>
