--- a/signupform.html
+++ b/signupform.html
@@ -43,7 +43,7 @@
             <option>Man</option>
             <option>Prefer not to say</option>
           </select>
-          <br />
+
           <input type="email" name="email" placeholder="Email *" required />
           <input
             type="text"
@@ -93,11 +93,10 @@
             />
           </div>
 
-          <p>My Energy Level</p>
+          <p>My Energy Right Now</p>
           <label class="range-label">
-            <input type="range" name="energy" min="0" max="100" step="5" />
+            <input type="range" name="energy" min="0" max="100" step="1" />
           </label>
-          <br />
 
           <p>Upload profile picture (optional)</p>
           <input type="file" name="photo" accept=".jpg,.png" />
