--- a/signupform.html
+++ b/signupform.html
@@ -62,7 +62,7 @@
           />
 
           <div class="inline-group1">
-            <p>I Am Looking for:</p>
+            <p>Looking for:</p>
             <label><input type="radio" name="prefer" required /> Women</label>
             <label><input type="radio" name="prefer" /> Men</label>
             <label><input type="radio" name="prefer" /> Any</label>
@@ -75,7 +75,7 @@
           ></textarea>
 
           <div class="inline-group2">
-            <p>I Mostly Drink Monster at:</p>
+            <p>Mostly Drink Monster at:</p>
             <label><input type="checkbox" name="interests" /> Parties</label>
             <label><input type="checkbox" name="interests" /> Home</label>
             <label
@@ -93,12 +93,12 @@
             />
           </div>
 
-          <p>My Energy Right Now</p>
+          <p>Energy Right Now</p>
           <label class="range-label">
             <input type="range" name="energy" min="0" max="100" step="1" />
           </label>
 
-          <p>Upload profile picture (optional)</p>
+          <p>Profile Picture  (Optional)</p>
           <input type="file" name="photo" accept=".jpg,.png" />
 
           <label class="check">
