--- a/signupform.html
+++ b/signupform.html
@@ -24,7 +24,7 @@
 
     <main>
       <div class="container">
-        <form class="form-card" action="index.html" method="get">
+        <form class="form-card" action="index.html" method="post" enctype="multipart/form-data">
           <h1>Create account</h1>
           <input type="text" name="name" placeholder="Name *" required />
           <select name="age" required>
