--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           ><img
             src="https://i.ibb.co/HpzMSqF3/monstermatch2.png"
             alt="monstermatch2"
-          /><br />You’re the only Monster I’d let keep me up all night</a
+          /><br />You're the only Monster I'd let keep me up all night</a
         >
 
         <a
@@ -72,14 +72,14 @@
           “Metro by day, Java by night — and I like it when everything runs a
           little too fast.”
         </p>
-        <p>“They call me Uncle… but I promise I’m not boring.”</p>
+        <p>“They call me Uncle… but I promise I'm not boring.”</p>
         <p>“I drink Monster, but I only bite if you ask.”</p>
         <p>
           “Stable in everyday life. Unstable in the good way when the lights go
           out.”
         </p>
         <p>
-          “I’m good at Java… and even better at making you lose track of time.”
+          “I'm good at Java… and even better at making you lose track of time.”
         </p>
         <p>
           “I can stick to a schedule — but I prefer to improvise with the right
@@ -97,7 +97,7 @@
           above ground.”
         </p>
         <p>“Sweet like a family man, naughty like a secret.”</p>
-        <p>“Uncle by day. ‘Monster’ when the mood is right.”</p>
+        <p>“Uncle by day. ‘Monster' when the mood is right.”</p>
         <p>
           “If you like men with responsibility… just wait until you meet my
           confidence.”
